@@ -27,7 +27,6 @@ import com.frostwire.android.R;
 import com.frostwire.android.core.ConfigurationManager;
 import com.frostwire.android.core.Constants;
 import com.frostwire.android.gui.activities.MainActivity;
-import com.frostwire.android.gui.activities.VPNStatusDetailActivity;
 import com.frostwire.android.gui.dialogs.SoftwareUpdaterDialog;
 import com.frostwire.android.gui.util.UIUtils;
 import com.frostwire.android.offers.Offers;
@@ -300,7 +299,6 @@ public final class SoftwareUpdater {
         CM.setInt(Constants.PREF_KEY_GUI_INTERSTITIAL_ON_EXIT_THRESHOLD, update.config.onExitThreshold);
         CM.setInt(Constants.PREF_KEY_GUI_INTERSTITIAL_ON_BACK_THRESHOLD, update.config.onBackThreshold);
         CM.setInt(Constants.PREF_KEY_GUI_INTERSTITIAL_ON_RESUME_THRESHOLD, update.config.onResumeThreshold);
-//        VPNStatusDetailActivity.updateVPNOffer(update.config.vpnOffer);
 
         // This has to be invoked once again here. It gets invoked by main activity on resume before we're done on this thread.
         Offers.initAdNetworks(mainActivity);
@@ -374,7 +372,6 @@ public final class SoftwareUpdater {
         int onExitThreshold = 100;
         int onBackThreshold = 100;
         int onResumeThreshold = 100;
-        //String vpnOffer = VPNStatusDetailActivity.VPNCompanyInfo.ExpressVPN.name();
 
         // ux stats
         boolean uxEnabled = false;
