@@ -1,4 +1,4 @@
-FrostWire 2.0.2 build 508 - MAR/09/2018
+FrostWire 2.0.2 build 509 - MAR/16/2018
  - Application startup is faster
  - Faster YT downloads
  - Zooqle search fixes
@@ -9,6 +9,7 @@ FrostWire 2.0.2 build 508 - MAR/09/2018
  - Bug where deleted .torrent files would reappear fixed
  - Translations updated, Urdu update
  - Loads of Crash and Freeze fixes
+ - VPN detection and offering updates
 
 FrostWire 2.0.1 build 490 - FEB/06/2018
  - Archive.org search fixes
